src/objects/CBL_Attitude__c.object
<CustomObject>
    <description>Represents the farmer attitude information for a Coffee Baseline</description>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CBL_Attitudes</relationshipLabel>
        <relationshipName>CBL_Attitudes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL_Attitude_Submission</relationshipLabel>
        <relationshipName>CBL_Attitude_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chooseToBeFarmer__c</fullName>
        <label>chooseToBeFarmer</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>destinedToBeFarmer__c</fullName>
        <label>destinedToBeFarmer</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>discussMethodsWOthers__c</fullName>
        <label>discussMethodsWOthers</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>effortInAgriculturePays__c</fullName>
        <label>effortInAgriculturePays</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>farmersLifeWillBeBetter__c</fullName>
        <label>farmersLifeWillBeBetter</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>futureCoffeePlans__c</fullName>
        <label>futureCoffeePlans</label>
        <picklist>
            <picklistValues>
                <fullName>Comprar tierras para sembrarlas de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sembrar café en tierras que ya tiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar tecnificación de su plantación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inversiones en su beneficio húmedo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vender parte o todo su cultivo de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustituir el café por otro cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No realizará cambios</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>happyToBeFarmer__c</fullName>
        <label>happyToBeFarmer</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>limitationsCauses__c</fullName>
        <label>limitationsCauses</label>
        <picklist>
            <picklistValues>
                <fullName>No tengo sufientes recursos financieros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta tiempo para dedicarme al cafetal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de conocimiento técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>neighborsProductivityLvl__c</fullName>
        <label>neighborsProductivityLvl</label>
        <picklist>
            <picklistValues>
                <fullName>Productividad alta comparado a conocidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productividad similar a conocidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menor comparado a conocidos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payForAgriAdvise__c</fullName>
        <label>payForAgriAdvise</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>productivityImprovmntLimitations__c</fullName>
        <label>productivityImprovmntLimitations</label>
        <picklist>
            <picklistValues>
                <fullName>Plantación muy vieja (más de 25 años)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variedad no adecuada para la zona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mala calidad de plantía (almácigo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de fertilizante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagas y enfermedades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clima no favorable para el café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>productivityTrend5Years__c</fullName>
        <label>productivityTrend5Years</label>
        <picklist>
            <picklistValues>
                <fullName>La productividad se incrementó</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La productividad permanece estable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La productividad ha disminuido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>takeAdvise__c</fullName>
        <label>takeAdvise</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wishChildrenBecomeFarmers__c</fullName>
        <label>wishChildrenBecomeFarmers</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>worthInvestingMoneyTimeAgr__c</fullName>
        <label>worthInvestingMoneyTimeAgr</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CBL_Attitude</label>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>CBL_Attitude Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_Attitudes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>